# Ivy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  graphcon-prd-v2.md  graphcon-srs.md
.agents/rules/: AGENTS.md  engineering-judgment.md  git-workflow.md  graphcon-antigravity-rules.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  release.yml  security-audit.yml
backend/: Cargo.toml
backend/ivy-cli/: Cargo.toml
backend/ivy-cli/src/: main.rs
backend/ivy-cli/src/commands/: config.rs  export.rs  mod.rs  plugin.rs  scan.rs
backend/ivy-core/: Cargo.toml
backend/ivy-core/src/: lib.rs
backend/ivy-core/src/domain/: chat.rs  finding.rs  graph_edge.rs  graph_node.rs  mod.rs  project.rs  scan.rs  user.rs
backend/ivy-core/src/services/: audit_service.rs  auth_service.rs  graph_service.rs  mod.rs  plugin_service.rs  project_service.rs  report_service.rs  scan_service.rs
backend/ivy-core/src/traits/: cache.rs  chat_repository.rs  graph_store.rs  mod.rs  repository.rs  tool_executor.rs
backend/ivy-db/: Cargo.toml
backend/ivy-db/src/: lib.rs
backend/ivy-db/src/migrations/: 001_create_users.sql
backend/ivy-db/src/neo4j/: client.rs  graph_repo.rs  mapper.rs  mod.rs  queries.rs
backend/ivy-db/src/postgres/: audit_repo.rs  chat_repo.rs  llm_config_repo.rs  mod.rs  pool.rs  project_repo.rs  scan_repo.rs  user_repo.rs
backend/ivy-db/src/redis/: cache_impl.rs  client.rs  mod.rs
backend/ivy-docker/: Cargo.toml
backend/ivy-docker/src/: executor.rs  lib.rs  manager.rs  output_stream.rs  sandbox.rs  scope_filter.rs
backend/ivy-mcp/: Cargo.toml
backend/ivy-mcp/src/: lib.rs
backend/ivy-mcp/src/llm/: claude.rs  config.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  provider.rs
backend/ivy-mcp/src/orchestrator/: chat.rs  correlator.rs  executor.rs  mod.rs  planner.rs
backend/ivy-mcp/src/tools/: mod.rs  registry.rs  schema.rs
backend/ivy-server/: Cargo.toml
backend/ivy-server/src/: config.rs  error.rs  main.rs  state.rs
backend/ivy-server/src/middleware/: audit.rs  cors.rs  mod.rs
backend/ivy-server/src/routes/: mod.rs  plugins.rs
backend/ivy-server/src/ws/: broadcast.rs  events.rs  handler.rs  mod.rs
backend/src/: main.rs
backend/src/api/: graph.rs  mod.rs  scan.rs  targets.rs
backend/src/db/: mod.rs
backend/src/graph/: mod.rs
backend/src/mcp/: mod.rs
backend/src/recon/: mod.rs
backend/src/recon/tools/: mod.rs
backend/src/recon/tools/rustscan/: tool.json
backend/src/recon/tools/subfinder/: tool.json
deploy/: Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml
docs/: Ivy_prd.md  Ivy_project_structure.md  Ivy_srs.md  task_division.md
docs/issue/: 01_setup_axum_server.md  02_setup_nextjs_dashboard.md  03_implement_docker_sandbox.md  04_websocket_streaming.md  05_core_domain_models.md  06_mcp_orchestrator.md  07_neo4j_graph_schema.md
docs/issue/dev_a/: A3_ai_orchestrator.md  milestones.md
docs/issue/dev_b/: milestones.md
engine/: Cargo.toml
engine/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: graph.ts  project.ts
mcp_server/: config.toml  requirements.txt  scope.json  server.py  test_server.py
plugins/ivy-exploit/: manifest.json
scripts/: push_issues.ps1  setup.sh
tools/_base/: Dockerfile
tools/ivy-amass/: Dockerfile  entrypoint.sh  tool.json
