[workspace]
resolver = "2"
members = [
    "backend/ivy-server",
    "backend/ivy-core",
    "backend/ivy-mcp",
    "backend/ivy-db",
    "backend/ivy-docker",
    "backend/ivy-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ivy-osint/ivy"

[workspace.dependencies]
# Web framework
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
neo4rs = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "json"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Docker
bollard = "0.18"

# WebSocket
tokio-tungstenite = "0.26"

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
toml = "0.8"

# MCP
async-trait = "0.1"

# Crypto
aes-gcm = "0.10"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates
ivy-core = { path = "backend/ivy-core" }
ivy-mcp = { path = "backend/ivy-mcp" }
ivy-db = { path = "backend/ivy-db" }
ivy-docker = { path = "backend/ivy-docker" }
