[package]
name = "ivy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ivy-core = { workspace = true }
ivy-mcp = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
