[package]
name = "ivy-docker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ivy-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
