[package]
name = "ivy-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ivy-core = { workspace = true }
ivy-mcp = { workspace = true }
ivy-db = { workspace = true }
ivy-docker = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
